Fixes flickering by removing rAF.

--- a/app/components/InstagramWall/index.css
+++ b/app/components/InstagramWall/index.css
@@ -10,8 +10,6 @@
 
 .Slider {
   display: flex;
-
-  -webkit-backface-visibility: hidden;
 }
 
 /*
